--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "Food-Trucks",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,6 +18,10 @@
   },
   "homepage": "https://github.com/jasandper/Food-Trucks#readme",
   "dependencies": {
-    "express": "^4.17.1"
-  }
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "sequelize": "^6.3.5"
+  },
+  "devDependencies": {},
+  "description": ""
 }
